--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,9 +3,9 @@
 {% block extrahead %}
   {% set title = config.site_name %}
   {% if page and page.meta and page.meta.title %}
-    {% set title = title ~ " - " ~ page.meta.title %}
+    {% set title = page.meta.title %}
   {% elif page and page.title and not page.is_homepage %}
-    {% set title = title ~ " - " ~ page.title %}
+    {% set title = page.title %}
   {% endif %}
   <meta property="og:title" content="{{ title }}" >
   <meta name="twitter:title" content="{{ title }}" >
