--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
 {% block extrahead %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script>
+                $(document).ready(function() {
+                    $('.link-tooltip').tooltipster();
+                });
+        </script>
   {% set title = config.site_name %}
   {% if page and page.meta and page.meta.title %}
     {% set title = page.meta.title %}
