--- a/overrides/main.html
+++ b/overrides/main.html
@@ -7,7 +7,8 @@
                     $('.link-tooltip').tooltipster();
                 });
         </script>
-  {% set title = config.site_name %}
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+{% set title = config.site_name %}
   {% if page and page.meta and page.meta.title %}
     {% set title = page.meta.title %}
   {% elif page and page.title and not page.is_homepage %}
