--- a/overrides/404.html
+++ b/overrides/404.html
@@ -3,22 +3,20 @@
 <!-- Content -->
 {% block content %}
 <style>
-  .md-sidebar {
-    display: none;
-  }
+    .md-sidebar {
+        display: none;
+    }
 
-  .md-grid {
-    margin-left: 0 !important;
-  }
+    .md-grid {
+        margin-left: 0 !important;
+    }
 
-  .img_404_format {
-    max-width: 200% !important;
-  }
+    .img_404_format {
+        max-width: 200% !important;
+    }
 </style>
-<img
-  src="assets/meta/error_404.svg"
+  <img src="assets/meta/error_404.svg" 
   width="1280"
   height="900"
-  class="img_404_format"
-/>
+  class="img_404_format">
 {% endblock %}
